# sleepy-discord

buildtools/: Makefile.switch
include/sleepy_discord/: cache.h  client.h  custom_opus_decoder.h  custom_udp_client.h  gateway.h  json_inputstream.h  message_receiver.h  server.h  server_member.h  udp.h  voice.h  voice_connection.h  websocket.h
sleepy_discord/: CMakeLists.txt  client.cpp  default_functions.cpp  voice_connection.cpp
